--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,12 +1,5 @@
-@import './theme/variable.scss';
+@import './theme/variables.scss';
+@import './theme/themes.scss';
 @import './theme/mixin.scss';
 
-// BG Mix
-@mixin button($value:default) {
-    background-color: themed('theme-title-background');
-    color: themed('theme-title-color');
-}
-
-.test {
-    background-color: tomato;
-}
+@include themify($themes);
