Style: Update Headerbar Height and Add Icon

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -8,3 +8,21 @@ body {
     padding: 0px;
     margin: 0px;
 }
+
+h1 {
+    font-family:'Franklin Gothic Medium', 'Arial', Arial, sans-serif;
+    white-space: nowrap;
+    margin: 0px;
+}
+
+h2 {
+    font-family:'Franklin Gothic Medium', 'Arial', Arial, sans-serif;
+    white-space: nowrap;
+    margin: 0px;
+}
+
+h3 {
+    font-family:'Franklin Gothic Medium', 'Arial', Arial, sans-serif;
+    white-space: nowrap;
+    margin: 0px;
+}
