--- a/src/assets/styles/theme/themes.scss
+++ b/src/assets/styles/theme/themes.scss
@@ -6,6 +6,7 @@ $themes:(
         content: (
             bg: $life-color,
             color: $death-color,
+            lightColor: $life-color-light,
         )
     ),
     death:(
@@ -13,5 +14,6 @@ $themes:(
         content: (
             bg: $death-color,
             color: $life-color,
+            lightColor: $death-color-light,
         )
 ))
