--- a/src/assets/styles/theme/variables.scss
+++ b/src/assets/styles/theme/variables.scss
@@ -1,4 +1,4 @@
 $life-color: #f5f5f5;
 $death-color: #0f0f0f;
-$life-color-light:#8a8888;
-$death-color-light: #8a8888
+$life-color-light: #8a8888;
+$death-color-light: #8a8888;
