--- a/src/assets/styles/theme/themes.scss
+++ b/src/assets/styles/theme/themes.scss
@@ -6,7 +6,7 @@ $themes: (
     content: (
       bg: $life-color,
       color: $death-color,
-      lightcolor: $life-color-light,
+      light-color: $life-color-light,
     )
   ),
   death:(
@@ -14,6 +14,6 @@ $themes: (
     content: (
       bg: $death-color,
       color: $life-color,
-      lightcolor: $death-color-light,
+      light-color: $death-color-light,
     )
   ));
